# TutoratiPAIS

./: README.md
2021-22/Esercitazione 1/: esercizio_1.c  esercizio_1.h  esercizio_2.c  esercizio_2.h  esercizio_2_alt.c  esercizio_3.c  esercizio_3.h  esercizio_4.c  esercizio_4.h  main.c
2021-22/Esercitazione 2/: CMakeLists.txt
2021-22/Esercitazione 2/esercizio_1/: calcolo.c  calcolo.h  main.c
2021-22/Esercitazione 2/esercizio_2/: calcolo.c  calcolo.h  main.c
2021-22/Esercitazione 2/esercizio_3/: main.c  stack.c  stack.h  stack_a.c
2021-22/Esercitazione 3/: CMakeLists.txt
2021-22/Esercitazione 3/esercizio_1/: fizzbuzz.c  fizzbuzz.h  main.c
2021-22/Esercitazione 3/esercizio_1/method_strategies/: is_a_multiple.c  is_a_multiple.h  is_a_pow.c  is_a_pow.h  is_greater.c  is_greater.h  method_selector.c  method_selector.h
2021-22/Esercitazione 3/esercizio_1/operation_selector/: add.c  add.h  mul.c  mul.h  operation_selector.c  operation_selector.h  sub.c  sub.h
2021-22/Esercitazione 3/esercizio_2/: characters.c  characters.h  main.c
2021-22/Esercitazione 3/esercizio_2/characters/: all_characters.h  dwarves.c  dwarves.h  elves.c  elves.h  utility.c  utility.h
2021-22/Esercitazione 3/esercizio_3/: list.c  list.h  main.c  record.c  record.h
2021-22/Esercitazione 3/esercizio_3/equivalences/: select_equivalents.c  select_equivalents.h
2021-22/Esercitazione 3/esercizio_3/equivalences/strategies/: all_strategies.h  equivalents_by_department.c  equivalents_by_department.h  equivalents_by_name.c  equivalents_by_name.h  equivalents_by_paycheck.c  equivalents_by_paycheck.h  equivalents_by_surname.c  equivalents_by_surname.h
2021-22/Esercitazione 4/: CMakeLists.txt
2021-22/Esercitazione 4/esercizio_1/: main.c  sort.c  sort.h
2021-22/Esercitazione 4/esercizio_1/data_types/: employee.c  employee.h  wrapper.c  wrapper.h
2021-22/Esercitazione 4/esercizio_1/orders/: for_surnames.h
2021-22/Esercitazione 4/esercizio_1/sorts/: merge_sort.c  selection_sort.c  selection_sort.h
2021-22/Esercitazione 4/esercizio_2/: main.c  sort.c  sort.h
2021-22/Esercitazione 4/esercizio_2/data_types/: chain_list.c  chain_list.h  employee.c  wrapper.c  wrapper.h
2021-22/Esercitazione 4/esercizio_2/orders/: for_idnumbers.c  for_idnumbers.h  for_surnames.c
2021-22/Esercitazione 4/esercizio_2/sorts/: merge_sort.c  merge_sort.h  selection_sort.c  selection_sort.h
2021-22/Esercitazione 5/: CMakeLists.txt  strats.c  strats.h  utils.c  utils.h
2021-22/Esercitazione 5/procedural/: max_heap.c  min_heap.c  true_heap.c
2021-22/Esercitazione 5/recursive/: main.c  max_heap.c  max_heap.h  min_heap.c  min_heap.h  true_heap.c  true_heap.h
2021-22/Esercitazione 6/: CMakeLists.txt  heap.c  heap.h  main.c  process.c  process.h  queue.c  queue.h
2021-22/Esercitazione 7/: CMakeLists.txt
2021-22/Esercitazione 7/esercizio_1/: main.c  sort.c  sort.h  utils.c  utils.h  wrapper.c  wrapper.h
2021-22/Esercitazione 7/esercizio_1/algorithm_strategies/: __all.h  heap_sort.c  heap_sort.h  insertion_sort.c  insertion_sort.h  merge_sort.c  merge_sort.h  selection_sort.c  selection_sort.h
2021-22/Esercitazione 7/esercizio_1/criterion_strategies/: __all.h  decreasing.c  decreasing.h  rising.c  rising.h
2021-22/Esercitazione 7/esercizio_2/: item.h  main.c
2021-22/Esercitazione 7/esercizio_2/prog_1/: item_1.c
2021-22/Esercitazione 7/esercizio_2/prog_2/: item_2.c
2021-22/Esercitazione 8/: CMakeLists.txt
2021-22/Esercitazione 8/esercizio_1/: criteria.c  criteria.h  hybrid.c  hybrid.h  insertion.c  insertion.h  main.c  point.c  point.h  selection.c  selection.h  utils.c  utils.h
2021-22/Esercitazione 8/esercizio_1-OPZ/: classpoint.c  classpoint.h  main.c  partial_heap.c  partial_heap.h
2021-22/Esercitazione 8/esercizio_2/: magic.c  magic.h  main.c
2021-22/Esercitazione 8/esercizio_3/: main.c
2022-23/Esercitazione 1/es_2/: main.c  time_slot.c  time_slot.h
2022-23/Esercitazione 1/es_3/: main.c  time_slot.h
2022-23/Esercitazione 2/: CMakeLists.txt  queue.c  queue_arrays.c
2022-23/Esercitazione 3/: CMakeLists.txt
2022-23/Esercitazione 3/e1/: list.c  list.h  main.c  record.c  record.h
2022-23/Esercitazione 3/e1/strats/: __get.c  __get.h  flower.c  flower.h  genus.c  genus.h  species.c  species.h
2022-23/Esercitazione 3/es2/: careful.c  careful.h  characters.c  characters.h  main.c  risky.c  risky.h  utility.c  utility.h
2022-23/Esercitazione 3/es3/: main.c
2022-23/Esercitazione 4/: CMakeLists.txt  main.c  procedural.c  procedural.h  recursive.c  recursive.h
2022-23/Esercitazione 5/: CMakeLists.txt
2022-23/Esercitazione 5/esercizio_1/: main.c  sort.c  sort.h
2022-23/Esercitazione 5/esercizio_2/: main.c  sort.c  sort.h
2022-23/Esercitazione 5/esercizio_3/: contestant.c  contestant.h  main.c  utils.c  utils.h
2022-23/Esercitazione 5/esercizio_3/__contestant_private/: sort.c  sort.h
2022-23/Esercitazione 5/esercizio_3/__contestant_private/strategies/: __get.c  __get.h  forScores.c  forScores.h  forSurnames.c  forSurnames.h
2022-23/esercitazione_1/es_1/: main.c
2022-23/esercitazione_1/es_3/: time_slot.c
2022-23/esercitazione_2/: longmain.c  main.c  queue.h
2022-23/p3/es1/: record.c  record.h
2022-23/p3/es1/strategies/: __get.c  __get.h
2022-23/p3/es2/: utility.c  utility.h
2022-23/untitled/: binsearch.c  binsearch.h
